--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
 <ul>
-  <p></p>
+  <p>Some of my favorite post-punk and Goth songs!</p>
   <li>"Love Will Tear Us Apart"</li>
   <li>"Bela Lugosi's Dead"</li>
   <li>"A Forest"</li>
